Add image evolution project

--- a/public/projects/image-pixel-sorter/index.html
+++ b/public/projects/image-pixel-sorter/index.html
@@ -24,7 +24,7 @@
 <p id="timer" style="display:block; font-size:18px; margin-bottom:20px;"></p>
 
 <p id="text" style="display:block; font-size:18px; margin-bottom:50px;">
-	Sorts the pixels in an image one by one based on the sum of red, green and blue in each pixel.
+	Live bubble sort of the pixels in an image ordered by brightness (sum of red, green and blue).
 </p>
 
 </center>
