Add thermo sim project

--- a/public/projects/double-pendulemon/src/index.html
+++ b/public/projects/double-pendulemon/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <title>Pendulum</title>
-    <body style="text-align:center;">
+    <body style="text-align:center; background-color:#111; color:white;">
         
         <div style="height:10px"></div>
 
