--- a/public/projects/mnist/src/index.html
+++ b/public/projects/mnist/src/index.html
@@ -17,7 +17,7 @@
     </style>
     <body>
 
-    <body style="">
+    <body>
         <div style="height:10px"></div>
 
         <b><h2>MNIST</h2></b>
